Thu Nov 28 01:35:08 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* st.c (st_keys): fix to use st_index_t for size of hash.

Thu Nov 28 00:36:52 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* st.c (st_keys): define st_keys(). it writes each key to buffer.

	* hash.c (rb_hash_keys): use st_keys() for performance improvement
	  if st_data_t and VALUE are compatible.

	* st.h: define macro ST_DATA_COMPATIBLE_P() to predicate whether
	  st_data_t and passed type are compatible.

	* configure.in: check existence of builtin function to use in
	  ST_DATA_COMPATIBLE_P().

Thu Nov 28 00:07:28 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* ruby_atomic.h: remove duplicate definisions between ATOMIC_XXX
	  and ATOMIC_SIZE_XXX.

Wed Nov 27 23:55:50 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* ruby_atomic.h: define ATOMIC_SIZE_CAS() with
	  __atomic_compare_exchange_n() and refactoring.

Tue Nov 27 21:43:00 2013  Akira Matsuda  <ronnie@dio.jp>

	* lib/irb/notifier.rb:  [Doc] Fix typo
	* ext/json/lib/json/common.rb:  Ditto.

Tue Nov 27 18:04:57 2013  Akira Matsuda  <ronnie@dio.jp>

	* lib/irb/notifier.rb:  Fix typo

Wed Nov 27 17:54:57 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_mark_stacked_objects): check only when check_mode > 0.

Wed Nov 27 16:07:19 2013  Aman Gupta <ruby@tmm1.net>

	* test/ruby/test_gc.rb (class TestGc): Fix warning in
	  test_expand_heap.

Wed Nov 27 15:55:52 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c (Init_GC): Add new GC::INTERNAL_CONSTANTS for information about
	  GC heap/page/slot sizing.
	* test/ruby/test_gc.rb (class TestGc): test for above.

Wed Nov 27 15:21:17 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c (gc_page_sweep): Fix compile warning from last commit.
	* hash.c (hash_aset_str): Re-use existing variable to avoid
	  unnecessary pointer dereferencing.

Wed Nov 27 15:12:55 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_page_sweep): disable debug print.

Wed Nov 27 15:05:59 2013  Koichi Sasada  <ko1@atdot.net>
